# Dtos/Translation/OutTranslationDto.cs
@@ -1,0 +1,7 @@
+namespace Wobalization.Dtos.Translation;
+
+public class OutTranslationDto
+{
+    public string? Key { get; set; }
+    public string? Value { get; set; }
+}
